Removed commons-io and commons-lang to use native code.