@@ -5,7 +5,6 @@ import java.util.List;
 
 import jakarta.servlet.http.HttpServletRequest;
 
-import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.Logger;
 import org.apache.logging.log4j.LogManager;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -51,13 +50,13 @@ public class SquadController extends AdminBaseController {
 		
 		mav = getFilterObjects(ADMIN_SQUADS, uuid, false, seasonKey, httpServletRequest);
 		
-		if (StringUtils.isNotBlank(uuid)) {
+		if (!uuid.isBlank()) {
 			team = teamService.findByUuid(uuid);
 		} else {
 			team = (Team)mav.getModel().get(TEAM);
 		}
 		
-		if (StringUtils.isBlank(seasonKey)) {
+		if (!seasonKey.isBlank()) {
 			seasonKey = ((Season)mav.getModel().get(SEASON)).getSeasonKey();
 		}
 		TeamSeasonMap teamSeasonMap = teamService.findTeamSeasonMap(team.getTeamKey(), seasonKey);
